partial/force-app/main/default/objects/Unit__c/fields/Archived_On__c.field-meta.xml
<CustomField>
    <fullName>Archived_On__c</fullName>
    <label>Archived On</label>
    <length>30</length>
    <type>Text</type>
</CustomField>