partial/force-app/main/default/objects/Unit__c/fields/Bathrooms_Max__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms_Max__c</fullName>
    <label>Washrooms Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>