partial/force-app/main/default/objects/Unit__c/fields/Block_Name__c.field-meta.xml
<CustomField>
    <fullName>Block_Name__c</fullName>
    <label>Block Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>