partial/force-app/main/default/objects/Unit__c/fields/Board_Notes__c.field-meta.xml
<CustomField>
    <fullName>Board_Notes__c</fullName>
    <label>Board Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>