partial/force-app/main/default/objects/Unit__c/fields/Board_Status__c.field-meta.xml
<CustomField>
    <fullName>Board_Status__c</fullName>
    <label>Board Status</label>
    <type>TextArea</type>
</CustomField>