partial/force-app/main/default/objects/Unit__c/fields/Board_Updated__c.field-meta.xml
<CustomField>
    <fullName>Board_Updated__c</fullName>
    <label>Board Updated</label>
    <length>30</length>
    <type>Text</type>
</CustomField>