partial/force-app/main/default/objects/Unit__c/fields/Brochure_Id__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Id__c</fullName>
    <label>Brochure Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>