partial/force-app/main/default/objects/Unit__c/fields/Build_Up_Area_m_square__c.field-meta.xml
<CustomField>
    <fullName>Build_Up_Area_m_square__c</fullName>
    <label>Build-Up Area m²</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>