partial/force-app/main/default/objects/Unit__c/fields/Build_Up_Area_square_ft__c.field-meta.xml
<CustomField>
    <fullName>Build_Up_Area_square_ft__c</fullName>
    <label>Build-Up Area ft²</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>