partial/force-app/main/default/objects/Unit__c/fields/BuildingName__c.field-meta.xml
<CustomField>
    <fullName>BuildingName__c</fullName>
    <label>Building Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>