partial/force-app/main/default/objects/Unit__c/fields/Carpet_Area_m_square__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_m_square__c</fullName>
    <label>Carpet Area m²</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>