partial/force-app/main/default/objects/Unit__c/fields/Carpet_Area_square_ft__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_square_ft__c</fullName>
    <label>Carpet Area ft²</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>