partial/force-app/main/default/objects/Unit__c/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <label>Commercial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>