partial/force-app/main/default/objects/Unit__c/fields/Council_Tax_Band__c.field-meta.xml
<CustomField>
    <fullName>Council_Tax_Band__c</fullName>
    <label>Council Tax Band</label>
    <length>100</length>
    <type>Text</type>
</CustomField>