partial/force-app/main/default/objects/Unit__c/fields/CountAmazonFiles__c.field-meta.xml
<CustomField>
    <fullName>CountAmazonFiles__c</fullName>
    <label>CountAmazonFiles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>