partial/force-app/main/default/objects/Unit__c/fields/CountOfReapitImages__c.field-meta.xml
<CustomField>
    <fullName>CountOfReapitImages__c</fullName>
    <label>CountOfReapitImages</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>