partial/force-app/main/default/objects/Unit__c/fields/Electricity_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Company_Id__c</fullName>
    <label>Electricity Company Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>