partial/force-app/main/default/objects/Unit__c/fields/Embedded__c.field-meta.xml
<CustomField>
    <fullName>Embedded__c</fullName>
    <label>Embedded</label>
    <length>50</length>
    <type>Text</type>
</CustomField>