partial/force-app/main/default/objects/Unit__c/fields/EPC__c.field-meta.xml
<CustomField>
    <fullName>EPC__c</fullName>
    <label>EPC</label>
    <type>TextArea</type>
</CustomField>