partial/force-app/main/default/objects/Unit__c/fields/EPC_Eer_Potential__c.field-meta.xml
<CustomField>
    <fullName>EPC_Eer_Potential__c</fullName>
    <label>EPC Eer Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>