partial/force-app/main/default/objects/Unit__c/fields/EPC_Eir_Potential__c.field-meta.xml
<CustomField>
    <fullName>EPC_Eir_Potential__c</fullName>
    <label>EPC Eir Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>