partial/force-app/main/default/objects/Unit__c/fields/EPC_Exempt__c.field-meta.xml
<CustomField>
    <fullName>EPC_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPC Exempt</label>
    <type>Checkbox</type>
</CustomField>