partial/force-app/main/default/objects/Unit__c/fields/EPC_Rating__c.field-meta.xml
<CustomField>
    <fullName>EPC_Rating__c</fullName>
    <label>EPC Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A: 92 points plus</fullName>
            </value>
            <value>
                <fullName>B: 81-91 points</fullName>
            </value>
            <value>
                <fullName>C: 69-80 points</fullName>
            </value>
            <value>
                <fullName>D: 55-68 points</fullName>
            </value>
            <value>
                <fullName>E: 39-54 points</fullName>
            </value>
            <value>
                <fullName>F: 21-38 points</fullName>
            </value>
            <value>
                <fullName>G: 1- 20 points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>