partial/force-app/main/default/objects/Unit__c/fields/eTag__c.field-meta.xml
<CustomField>
    <fullName>eTag__c</fullName>
    <label>eTag</label>
    <type>TextArea</type>
</CustomField>