partial/force-app/main/default/objects/Unit__c/fields/External_Area__c.field-meta.xml
<CustomField>
    <fullName>External_Area__c</fullName>
    <label>External Area</label>
    <type>TextArea</type>
</CustomField>