partial/force-app/main/default/objects/Unit__c/fields/External_Area_Min__c.field-meta.xml
<CustomField>
    <fullName>External_Area_Min__c</fullName>
    <label>External Area Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>