partial/force-app/main/default/objects/Unit__c/fields/External_Area_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Area_Type__c</fullName>
    <label>External Area Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>