partial/force-app/main/default/objects/Unit__c/fields/Extras_Field__c.field-meta.xml
<CustomField>
    <fullName>Extras_Field__c</fullName>
    <label>Extras Field</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>