partial/force-app/main/default/objects/Unit__c/fields/Featured_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Featured_Image_Url__c</fullName>
    <label>Featured Image Url</label>
    <type>Url</type>
</CustomField>