partial/force-app/main/default/objects/Unit__c/fields/Furnished_Status__c.field-meta.xml
<CustomField>
    <fullName>Furnished_Status__c</fullName>
    <label>Furnished Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Semi Furnished</fullName>
            </value>
            <value>
                <fullName>Fully Furnished</fullName>
            </value>
            <value>
                <fullName>Un-Furnished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>