partial/force-app/main/default/objects/Unit__c/fields/Ground_Rent__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent__c</fullName>
    <label>Ground Rent</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>