partial/force-app/main/default/objects/Unit__c/fields/Ground_Rent_Comment__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent_Comment__c</fullName>
    <label>Ground Rent Comment</label>
    <type>TextArea</type>
</CustomField>