partial/force-app/main/default/objects/Unit__c/fields/Ground_Rent_Increase__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent_Increase__c</fullName>
    <label>Ground Rent Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>