partial/force-app/main/default/objects/Unit__c/fields/Ground_Rent_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent_Review_Date__c</fullName>
    <label>Ground Rent Review Date</label>
    <type>DateTime</type>
</CustomField>