partial/force-app/main/default/objects/Unit__c/fields/Home_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Home_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Insurance</label>
    <type>Checkbox</type>
</CustomField>