partial/force-app/main/default/objects/Unit__c/fields/Insurance_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Id__c</fullName>
    <label>Insurance Company Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>