partial/force-app/main/default/objects/Unit__c/fields/Internal_Area__c.field-meta.xml
<CustomField>
    <fullName>Internal_Area__c</fullName>
    <label>Internal Area</label>
    <type>TextArea</type>
</CustomField>