partial/force-app/main/default/objects/Unit__c/fields/Internal_Area_Max__c.field-meta.xml
<CustomField>
    <fullName>Internal_Area_Max__c</fullName>
    <label>Internal Area Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>