partial/force-app/main/default/objects/Unit__c/fields/Internal_Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Internal_Area_Type__c</fullName>
    <label>Internal Area Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>