partial/force-app/main/default/objects/Unit__c/fields/Internet_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Internet_Company_Id__c</fullName>
    <label>Internet Company Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>