partial/force-app/main/default/objects/Unit__c/fields/KeyFeatureRich__c.field-meta.xml
<CustomField>
    <fullName>KeyFeatureRich__c</fullName>
    <label>Key Features</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>