partial/force-app/main/default/objects/Unit__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <length>500</length>
    <type>Html</type>
</CustomField>