partial/force-app/main/default/objects/Unit__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude and Longitude</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>