partial/force-app/main/default/objects/Unit__c/fields/Links__c.field-meta.xml
<CustomField>
    <fullName>Links__c</fullName>
    <label>Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>