partial/force-app/main/default/objects/Unit__c/fields/Local_Authority__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority__c</fullName>
    <label>Local Authority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>