partial/force-app/main/default/objects/Unit__c/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <label>Locality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Village</fullName>
            </value>
            <value>
                <fullName>TownCity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>