partial/force-app/main/default/objects/Unit__c/fields/localTimeZone__c.field-meta.xml
<CustomField>
    <fullName>localTimeZone__c</fullName>
    <label>localTimeZone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>