partial/force-app/main/default/objects/Unit__c/fields/Lost_Instruction_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Instruction_Date__c</fullName>
    <label>Lost Instruction Date</label>
    <type>DateTime</type>
</CustomField>