partial/force-app/main/default/objects/Unit__c/fields/Lost_Instruction_Note__c.field-meta.xml
<CustomField>
    <fullName>Lost_Instruction_Note__c</fullName>
    <label>Lost Instruction Note</label>
    <type>TextArea</type>
</CustomField>