partial/force-app/main/default/objects/Unit__c/fields/Maintenance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Fee__c</fullName>
    <formula>Unit_Price__c * Maintenance_Fee_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>