partial/force-app/main/default/objects/Unit__c/fields/Maintenance_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Fee_Percent__c</fullName>
    <label>Maintenance Fee %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>