partial/force-app/main/default/objects/Unit__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <label>Metadata</label>
    <length>50</length>
    <type>Text</type>
</CustomField>