partial/force-app/main/default/objects/Unit__c/fields/No_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bedrooms__c</fullName>
    <label>No. of Bedrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>