partial/force-app/main/default/objects/Unit__c/fields/No_of_Washrooms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Washrooms__c</fullName>
    <label>No. of Washrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>