partial/force-app/main/default/objects/Unit__c/fields/Office_Ids__c.field-meta.xml
<CustomField>
    <fullName>Office_Ids__c</fullName>
    <label>Office Ids</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OXF</fullName>
            </value>
            <value>
                <fullName>SOL</fullName>
            </value>
            <value>
                <fullName>LNH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>