partial/force-app/main/default/objects/Unit__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residents</fullName>
            </value>
            <value>
                <fullName>OffStreet</fullName>
            </value>
            <value>
                <fullName>Secure</fullName>
            </value>
            <value>
                <fullName>Underground</fullName>
            </value>
            <value>
                <fullName>Garage</fullName>
            </value>
            <value>
                <fullName>DoubleGarage</fullName>
            </value>
            <value>
                <fullName>TripleGarage</fullName>
            </value>
            <value>
                <fullName>Carport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>