partial/force-app/main/default/objects/Unit__c/fields/Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Parking_Spaces__c</fullName>
    <label>Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>