partial/force-app/main/default/objects/Unit__c/fields/Price_Per_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Square_Feet__c</fullName>
    <formula>Unit_Price__c /  Carpet_Area_square_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Per Square Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>