partial/force-app/main/default/objects/Unit__c/fields/Price_Per_Square_Metre__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Square_Metre__c</fullName>
    <formula>Unit_Price__c /  Carpet_Area_m_square__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Per Square Metre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>