partial/force-app/main/default/objects/Unit__c/fields/Reapit_Alternate_Id__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Alternate_Id__c</fullName>
    <label>Alternate Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>