partial/force-app/main/default/objects/Unit__c/fields/Reapit_Department_Id__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Department_Id__c</fullName>
    <label>Department Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>