partial/force-app/main/default/objects/Unit__c/fields/Reapit_Disabled_Portal_Ids__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Disabled_Portal_Ids__c</fullName>
    <label>Disabled Portal Ids</label>
    <type>TextArea</type>
</CustomField>