partial/force-app/main/default/objects/Unit__c/fields/Reapit_Internet_Advertising__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Internet_Advertising__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internet Advertising</label>
    <type>Checkbox</type>
</CustomField>