partial/force-app/main/default/objects/Unit__c/fields/Reapit_Marketing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Marketing_Mode__c</fullName>
    <label>Marketing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letting</fullName>
            </value>
            <value>
                <fullName>Selling</fullName>
            </value>
            <value>
                <fullName>SellingAndLetting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>