partial/force-app/main/default/objects/Unit__c/fields/Reapit_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Modified_Date__c</fullName>
    <label>Reapit Modified Date</label>
    <type>DateTime</type>
</CustomField>