partial/force-app/main/default/objects/Unit__c/fields/Reapit_Response__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Response__c</fullName>
    <label>Response</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>