partial/force-app/main/default/objects/Unit__c/fields/Reapit_Status__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Status__c</fullName>
    <label>Reapit Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>