partial/force-app/main/default/objects/Unit__c/fields/Reapit_Web_Id__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Web_Id__c</fullName>
    <externalId>true</externalId>
    <label>Reapit_Web_Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>