partial/force-app/main/default/objects/Unit__c/fields/Reception__c.field-meta.xml
<CustomField>
    <fullName>Reception__c</fullName>
    <label>Reception</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>