partial/force-app/main/default/objects/Unit__c/fields/Receptions_Max__c.field-meta.xml
<CustomField>
    <fullName>Receptions_Max__c</fullName>
    <label>Receptions Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>