partial/force-app/main/default/objects/Unit__c/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <label>Regional</label>
    <length>50</length>
    <type>Text</type>
</CustomField>