partial/force-app/main/default/objects/Unit__c/fields/Rent_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Rent_per_Month__c</fullName>
    <description>This field has been created to capture the Rent per month</description>
    <label>Rent per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>