partial/force-app/main/default/objects/Unit__c/fields/Rent_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Rent_per_Week__c</fullName>
    <description>This field has created to capture the rent per week</description>
    <label>Rent per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>