partial/force-app/main/default/objects/Unit__c/fields/Rental_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Rental_Guarantee__c</fullName>
    <formula>Unit_Price__c *  Rental_Guarantee_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Guarantee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>