partial/force-app/main/default/objects/Unit__c/fields/Rental_Guarantee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rental_Guarantee_Percent__c</fullName>
    <label>Rental Guarantee %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>