partial/force-app/main/default/objects/Unit__c/fields/Room_Details_Approved__c.field-meta.xml
<CustomField>
    <fullName>Room_Details_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Room Details Approved</label>
    <type>Checkbox</type>
</CustomField>