partial/force-app/main/default/objects/Unit__c/fields/Rural__c.field-meta.xml
<CustomField>
    <fullName>Rural__c</fullName>
    <label>Rural</label>
    <length>200</length>
    <type>Text</type>
</CustomField>