partial/force-app/main/default/objects/Unit__c/fields/Secondary_Market__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Market</label>
    <type>Checkbox</type>
</CustomField>