partial/force-app/main/default/objects/Unit__c/fields/Service_Charge_Comment__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Comment__c</fullName>
    <label>Service Charge Comment</label>
    <type>TextArea</type>
</CustomField>