partial/force-app/main/default/objects/Unit__c/fields/Shared_Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Shared_Ownership_Percentage__c</fullName>
    <label>Shared Ownership Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>