partial/force-app/main/default/objects/Unit__c/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <label>Situation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patio</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>RoofTerrace</fullName>
            </value>
            <value>
                <fullName>Conservatory</fullName>
            </value>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>CommunalGardens</fullName>
            </value>
            <value>
                <fullName>OutsideSpace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>