partial/force-app/main/default/objects/Unit__c/fields/Special_Features__c.field-meta.xml
<CustomField>
    <fullName>Special_Features__c</fullName>
    <label>Special Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Porter</fullName>
            </value>
            <value>
                <fullName>Lift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>