partial/force-app/main/default/objects/Unit__c/fields/Strapline__c.field-meta.xml
<CustomField>
    <fullName>Strapline__c</fullName>
    <label>Strapline</label>
    <length>50</length>
    <type>Text</type>
</CustomField>